--- a/index2.html
+++ b/index2.html
@@ -4,15 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body{
+            background-color: rgb(0, 255, 247);
+            color: black;
+            border: 4px solid red;
+        }
+    </style>
 </head>
 <body>
 
-    <h1 style="padding: 5em 3em 10em 7em;">Bienvenidos a Certus</h1>
-    <h1 style="padding-top: 5em;">Bienvenidos a Certus</h1>
-    <h1 style="padding-right: 3em;">Bienvenidos a Certus</h1>
-    <h1 style="padding-bottom: 10em;">Bienvenidos a Certus</h1>
-    <h1 style="padding-left: 7em;">Bienvenidos a Certus</h1>
-    <h1 style="padding-top: 5em; padding-right: 3em; padding-bottom: 10em; padding-left: 7em;">Bienvenidos a Certus</h1>
+    <h1 style="margin: 5em 3em 10em 7em;"><u>Bienvenidos a Certus</u></h1>
+    <h1 style="margin: 5em;"><i>Bienvenidos a Certus</i></h1>
+    <h1 style="margin: 3em;"><i>Bienvenidos a Certus</i></h1>
+    <h1 style="margin: 10em;"><i>Bienvenidos a Certus</i></h1>
+    <h1 style="margin: 7em;"><i>Bienvenidos a Certus</i></h1>
+    <h1 style="margin: 5em; padding-right: 3em; padding-bottom: 10em; padding-left: 7em;">Bienvenidos a Certus</h1>
 
 </body>
 </html>
