--- a/index2.html
+++ b/index2.html
@@ -14,12 +14,12 @@
 </head>
 <body>
 
-    <h1 style="margin: 5em 3em 10em 7em;"><u>Bienvenidos a Certus</u></h1>
-    <h1 style="margin-top: 5em;"><i>Bienvenidos a Certus</i></h1>
-    <h1 style="margin-right: 3em;"><i>Bienvenidos a Certus</i></h1>
-    <h1 style="margin-bottom: 10em;"><i>Bienvenidos a Certus</i></h1>
-    <h1 style="margin-left: 7em;"><i>Bienvenidos a Certus</i></h1>
-    <h1 style="margin-top: 5em; padding-right: 3em; padding-bottom: 10em; padding-left: 7em;">Bienvenidos a Certus</h1>
+    <h1 style="padding: 5em 3em 10em 7em;"><u>Bienvenidos a Certus</u></h1>
+    <h1 style="padding-top: 5em;"><i>Bienvenidos a Certus</i></h1>
+    <h1 style="padding-right: 3em;"><i>Bienvenidos a Certus</i></h1>
+    <h1 style="padding-bottom: 10em;"><i>Bienvenidos a Certus</i></h1>
+    <h1 style="padding-left: 7em;"><i>Bienvenidos a Certus</i></h1>
+    <h1 style="padding-top: 5em; padding-right: 3em; padding-bottom: 10em; padding-left: 7em;">Bienvenidos a Certus</h1>
 
 </body>
 </html>
